sitebasis/views/resources/styles/backoffice.css
/* ... */
.BackOfficeLayout .ContentTypeTree li {
    padding-top: 0.8em;
    white-space: nowrap;
}

.BackOfficeLayout .ContentTypeTree li li {
    padding-left: 2em;
}

.BackOfficeLayout .ContentTypeTree .entry_label {
    background-repeat: no-repeat;
    background-position: left center;
    padding-left: 1.75em;
    padding-bottom: 0.2em;
    color: black;
}

/* Content type selector
-----------------------------------------------------------------------------*/
.BackOfficeLayout .ContentTypeSelector {
    margin-left: -0.5em;
    margin-bottom: 1.5em;
}

.BackOfficeLayout .ContentTypeSelector > .entry_label {
    color: black;
    font-weight: bold;
    padding: 0.2em 0.5em;
    padding-right: 1em;
}

.BackOfficeLayout .ContentTypeSelector .selector_content {
    top: 1.4em;
    z-index: 3;
    padding: 0.4em;
    min-width: 16em;
}

.BackOfficeLayout .ContentTypeSelector .selector_content > li {
    font-size: 85%;
}

.BackOfficeLayout .ContentTypeSelector .selected > .entry_label {
    font-weight: bold;
}

/* Content type picker
-----------------------------------------------------------------------------*/
.BackOfficeLayout .ContentTypePicker .label {
    display: block;
    padding: 0.5em 0.2em;
}

.BackOfficeLayout .ContentTypePicker .label .empty_option {
    padding-left: 0;
}

.BackOfficeLayout .ContentTypePicker label.empty_option {
    padding-left: 0.3em;
    margin-left: 0;
}

.BackOfficeLayout .ContentTypePicker .selector_content {
    max-height: 20em;
    min-width: 16em;
    overflow: auto;
}

.BackOfficeLayout .ContentTypePicker .entry_label {
    display: inline;
    margin-left: 0.3em;
}

/* Paging
-----------------------------------------------------------------------------*/

.BackOfficeLayout .PagingControls {
    float: right;
    padding-right: 0.5em;
}

.BackOfficeLayout .item_count,
.BackOfficeLayout .page_size,
.BackOfficeLayout .Pager {
    float: right;
    font-size: 85%;
    margin-left: 2em;
}

.BackOfficeLayout .page_size input {
    font-size: inherit;
    width: 2.5em;
    margin-left: 0.4em;
}

.BackOfficeLayout .Pager * {
    float: left;
    display: block;
}

.BackOfficeLayout .Pager .previous {
    margin-left: 0.3em;
}

.BackOfficeLayout .Pager .next {
    margin-right: 0.3em;
}

.BackOfficeLayout .Pager .page_links {
    margin-left: 0.8em;
    margin-right: 0.8em;
}

.BackOfficeLayout .Pager .page_links a + a {
    margin-left: 0.5em;
}

.BackOfficeLayout .Pager .page_links a.selected {
    font-weight: bold;
}

.BackOfficeLayout .no_results {
    margin-top: 2em;
    border: 1px dotted rgb(200,160,120);
    padding: 0.5em;
}

/* Tree content view
-----------------------------------------------------------------------------*/

.BackOfficeLayout .TreeContentView .expander {
    margin-left: -0.1em;
    float: left;
}

.BackOfficeLayout .TreeContentView .expander + label {
    float: left;
    margin-left: 0.3em;
}

.BackOfficeLayout .TreeContentView .expander img {
    vertical-align: middle;
}

.BackOfficeLayout .TreeContentView .depth_level {
    padding-left: 1.8em;
}

.BackOfficeLayout .TreeContentView .leaf label {
    margin-left: 1.5em;
}

/* History
-----------------------------------------------------------------------------*/

.BackOfficeHistoryView td.changes ul {
    list-style-type: none;
    padding: 0;
    margin: 0;
}

.BackOfficeHistoryView td.changes li {
    background-position: left center;
    background-repeat: no-repeat;
    padding-top: 0.2em;
    padding-bottom: 0.2em;
    padding-left: 1.6em;
}

.BackOfficeHistoryView td.changes li + li {
    margin-top: 0.3em;
}

.BackOfficeHistoryView td.changes li.create {
    background-image: url(../images/new_small.png);
}

.BackOfficeHistoryView td.changes li.modify {
    background-image: url(../images/edit_small.png);
}

.BackOfficeHistoryView td.changes li.delete {
    background-image: url(../images/delete_small.png);
}

/* Notifications
-----------------------------------------------------------------------------*/
.BackOfficeLayout .notification_box {
    margin: 0.8em;
}

.BackOfficeLayout .notification {
    padding: 0.4em;
}

.BackOfficeLayout .notification + .notification {
    margin-top: 0.4em;
}

.BackOfficeLayout .success {
    border: 1px solid rgb(200,220,200);
    background-color: rgb(220,240,220);
}

.BackOfficeLayout .error_box,
.BackOfficeLayout .notification_box .error {
    color: black;
    border: 1px dotted rgb(200,160,120);
    background-color: rgb(245,230,215);
    padding: 0.5em;
    margin: 0;
    margin-bottom: 1em;
}

.BackOfficeLayout .error_box li {
    list-style-type: none;
}

.BackOfficeLayout .error_box li + li {
    margin-top: 0.2em;
}

.BackOfficeLayout .error_box li em {
    font-style: normal;
    font-weight: bold;
    color: rgb(135,35,10);
}

.BackOfficeLayout .field .error {
    border: 1px solid rgb(200,160,120) !important;
    background-color: rgb(245,230,215) !important;
}

/* Detail view
-----------------------------------------------------------------------------*/
.BackOfficeShowDetailView .PropertyTable {
    margin-top: 1.5em;
}


/* Edit form
-----------------------------------------------------------------------------*/
.BackOfficeItemView .toolbar .action_button.selected {
    font-weight: bold;
    color: rgb(50,50,50);
}

.BackOfficeItemView .toolbar .save_action,
.BackOfficeItemView .toolbar .save_draft_action,
.BackOfficeItemView .toolbar .confirm_draft_action,
.BackOfficeItemView .toolbar .close_action,
.BackOfficeItemView .toolbar .cancel_action {
    float: right;
}

.BackOfficeItemView .navigation .section_entry {
    z-index: 1;
    margin-left: 0;
    margin-right: 0.2em;
}

.BackOfficeItemView .edit_form_frame {
    border: 1px solid rgb(200,210,220);
    border-top: none;
    z-index: 0;
    clear: both;
    position: absolute;    
    top: 2.5em;
    bottom: 4em;
    left: 0;
    right: 0;
    overflow: auto;
}

.BackOfficeItemView .edit_form {
    padding: 0;
}
/* ... */

